--- a/wfh_companion/pubspec.yaml
+++ b/wfh_companion/pubspec.yaml
@@ -29,6 +29,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.3.0
   firebase_auth: ^1.4.1
+  email_validator: ^2.0.1
 
 dev_dependencies:
   flutter_test:
